<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="0dip"
            android:paddingBottom="0dp">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/engg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:background="@layout/footer_repeated"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">


                />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header">



            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E5E6E6"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:drawableRight="@drawable/ic_person"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:layout_above="@+id/password"
                 />


            <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#E5E6E6"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_key"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:textColor="#372c24"
            android:textColorHint="@color/input_register_hint"
            android:layout_weight="0.69"
            android:layout_above="@+id/confirmpassword"
            android:layout_alignParentStart="true" />

            <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="5dip"
             android:layout_marginBottom="20dip"
            android:background="#E5E6E6"
            android:hint="@string/hint_confirmpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#372c24"
            android:drawableRight="@drawable/ic_key"
            android:textColorHint="@color/input_register_hint"
            android:layout_above="@+id/btnRegister"
            android:layout_centerHorizontal="true"
           />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E5E6E6"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:drawableRight="@drawable/ic_email"
                android:textColor="#372c24"
                android:padding="10dp"
                android:textColorHint="@color/input_register_hint"
                android:layout_above="@+id/password"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="17dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/btn_register"
                android:textColor="@color/btn_login"
                android:layout_above="@+id/footer"
                android:layout_alignParentEnd="true" />


            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="#0b84aa"
                android:textSize="17dp"
                android:layout_above="@+id/footer"
                android:layout_weight="0.74"></Button>
        </LinearLayout>
    </RelativeLayout>

    </ScrollView>