<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">

        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="0dip"
            android:paddingBottom="0dp">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/engg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"/>
            </LinearLayout>

        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:background="@layout/footer_repeated"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header">


            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E5E6E6"
                android:hint="@string/hint_email"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:textColor="#372c24"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:drawableRight="@drawable/ic_email"
                android:textColorHint="@color/input_login_hint"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E5E6E6"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10sp"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:drawableRight="@drawable/ic_key"
                android:textColor="#372c24"
                android:textColorHint="@color/input_login_hint"
                android:maxLines="1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/btn_login"
                android:background="@drawable/button_shape"
                android:textColor="@color/btn_login" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:gravity="center"
                android:textColor="#0b84aa"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textSize="17dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btnForgetPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:textColor="#0b84aa"
            android:text="@string/btn_link_to_forgetpassword"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:layout_marginBottom="72dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
    </ScrollView>